apps/files/css/files.scss
/* ... */
table.multiselect thead {
	position: fixed;
	top: 94px;
	z-index: 55;
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	left: 250px; /* sidebar */
}

table.multiselect thead th {
	background-color: rgba(255, 255, 255, 0.95); /* like controls bar */
	color: #000;
	font-weight: bold;
	border-bottom: 0;
}

#app-content.with-app-sidebar table.multiselect thead{
	margin-right: 27%;
}

table.multiselect #headerName {
	position: relative;
	width: 9999px; /* when we use 100%, the styling breaks on mobile … table styling */
}
table.multiselect #modified {
	display: none;
}

table td.selection,
table th.selection,
table td.fileaction {
	width: 32px;
	text-align: center;
}
table td.filename a.name {
	display: flex;
	position:relative; /* Firefox needs to explicitly have this default set … */
	-moz-box-sizing: border-box;
	box-sizing: border-box;
	height: 50px;
	line-height: 50px;
	padding: 0;
}
table td.filename .thumbnail-wrapper {
	/* we need this to make sure flex is working inside a table cell */
	width: 0;
	min-width: 50px;
	max-width: 50px;
	height: 50px;
}
table td.filename .thumbnail-wrapper.icon-loading-small {
	&:after {
		z-index: 10;
	}
	.thumbnail {
		opacity: 0.2;
	}
}
table td.filename .thumbnail {
	display: inline-block;
	width: 32px;
	height: 32px;
	background-size: 32px;
	margin-left: 9px;
	margin-top: 9px;
	cursor: pointer;
	position: absolute;
	z-index: 4;
}
table td.filename input.filename {
	width: 70%;
	margin-top: 9px;
	margin-left: 48px;
	cursor: text;
}

table td.filename a, table td.login, table td.logout, table td.download, table td.upload, table td.create, table td.delete { padding:3px 8px 8px 3px; }
table td.filename .nametext, .modified, .column-last>span:first-child { float:left; padding:15px 0; }

.modified, .column-last>span:first-child {
	position: relative;
	overflow: hidden;
	text-overflow: ellipsis;
	width: 110px;
}

/* TODO fix usability bug (accidental file/folder selection) */
table {
	td.filename {
		max-width: 0;
		.nametext {
			width: 0;
			flex-grow: 1;
			display: flex;
			padding: 0;
			overflow: hidden;
			white-space: nowrap;
			text-overflow: ellipsis;
			height: 100%;
			z-index: 10;
			padding-right: 20px;
		}
	}

	.uploadtext {
		position: absolute;
		left: 55px;
	}
}

.hide-hidden-files #fileList tr.hidden-file,
.hide-hidden-files #fileList tr.hidden-file.dragging {
	display: none;
}

#fileList tr.animate-opacity {
	-webkit-transition:opacity 250ms;
	-moz-transition:opacity 250ms;
	-o-transition:opacity 250ms;
	transition:opacity 250ms;
}
#fileList tr.dragging {
	opacity: 0.2;
}

table td.filename .nametext .innernametext {
	text-overflow: ellipsis;
	overflow: hidden;
	position: relative;
	vertical-align: top;
}

/* for smaller resolutions - see mobile.css */

table td.filename .uploadtext {
	font-weight: normal;
	margin-left: 55px;
	margin-top: 5px;
	height: 20px;
	padding: 10px 0;
	font-size: 11px;
	opacity: .5;
}

table td.selection {
	padding: 0;
}

/* File checkboxes */
#fileList tr td.selection>.selectCheckBox + label:before {
	opacity: 0.3;
}

/* Show checkbox with full opacity when hovering, checked, or selected */
#fileList tr:hover td.selection>.selectCheckBox + label:before,
#fileList tr:focus td.selection>.selectCheckBox + label:before,
#fileList tr td.selection>.selectCheckBox:checked + label:before,
#fileList tr.selected td.selection>.selectCheckBox + label:before {
	opacity: 1;
}

/* Use label to have bigger clickable size for checkbox */
#fileList tr td.selection>.selectCheckBox + label,
.select-all + label {
	padding: 16px;
}

#fileList tr td.filename {
	position: relative;
	width: 100%;
	padding-left: 0;
	padding-right:0;
	-webkit-transition:background-image 500ms; -moz-transition:background-image 500ms; -o-transition:background-image 500ms; transition:background-image 500ms;
}

#fileList tr td.filename a.name label {
	position: absolute;
	width: 80%;
	height: 50px;
}

#fileList tr td.filename .favorite {
	display: inline-block;
	float: left;
}
#fileList tr td.filename .favorite-mark {
	position: absolute;
	display: block;
	top: -6px;
	right: -6px;
	line-height: 100%;
	text-align: center;
}

#uploadsize-message,#delete-confirm { display:none; }

/* File actions */
.fileactions {
	z-index: 50;
}

.busy .fileactions, .busy .action {
	visibility: hidden;
}

/* fix position of bubble pointer for Files app */
.bubble,
#app-navigation .app-navigation-entry-menu {
	border-top-right-radius: 3px;
	min-width: 100px;
}

/* force show the loading icon, not only on hover */
#fileList .icon-loading-small {
	opacity: 1 !important;
	display: inline !important;
}

#fileList .action.action-share-notification span, #fileList a.name {
	cursor: default !important;
}

a.action > img {
	height: 16px;
	width: 16px;
	vertical-align: text-bottom;
}

/* Actions for selected files */
.selectedActions {
    position: relative;
    display: inline-block;
    vertical-align: middle;
}

.selectedActions a {
	display: inline;
	line-height: 50px;
	padding: 16px 5px;
}

.selectedActions a.hidden {
	display: none;
}
.selectedActions a img {
	position:relative;
	vertical-align: text-bottom;
	margin-bottom: -1px;
}

#fileList td a {
	a.action {
		display: inline;
		padding: 17px 8px;
		line-height: 50px;
		opacity: .3;
		&.action-share {
			padding: 17px 14px;
			.avatar {
				display: inline-block;
				vertical-align: middle;
			}
		}
		&.action-menu {
			padding-top: 17px;
			padding-bottom: 17px;
			padding-left: 14px;
			padding-right: 14px;
		}
		&.no-permission {
			&:hover, &:focus {
				opacity: .3;
			}
		}
		&.disabled {
			&:hover, &:focus,
			img {
				opacity: .3;
			}
			&.action-download {
				opacity: .7;
				&:hover, &:focus {
					opacity: .7;
				}
			}
		}
		&:hover, &:focus {
			opacity: .7;
		}
	}
	.fileActionsMenu a.action, a.action.action-share.shared-style {
		opacity: .7;
	}
}
/* ... */

